[WIP][Hospital] Create endpoint
