# config/routes.php
@@ -3,5 +3,6 @@
 use Yumerov\CredowebBackendTask\Controller\HospitalController;
 
 return [
-    ['GET', '/api/hospitals/{id}', [HospitalController::class, 'read']]
+    ['GET', '/api/hospitals/{id}', [HospitalController::class, 'read']],
+    ['POST', '/api/hospitals', [HospitalController::class, 'create']]
 ];
